#53 - added link to OSM in the navbar, it will direct user to roughly the same view (location) on official OSM map

--- a/web/index.html
+++ b/web/index.html
@@ -91,6 +91,12 @@
                         <i class="fab fa-wikipedia-w fa-lg" title="Link do Wikipedii OpenStreetMap"></i>
                     </a>
                 </li>
+                <li class="nav-item px-2">
+                    <a id="osm-link" class="nav-link" href="https://www.openstreetmap.org/" target="_blank">
+                        <img height="30px" title="Link do tej lokalizacji w OpenStreetMap"
+                             src="https://wiki.openstreetmap.org/w/images/7/79/Public-images-osm_logo.svg"/>
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
