--- a/web/help.html
+++ b/web/help.html
@@ -27,7 +27,7 @@
     <h1 class="my-4">FAQ</h1>
     <h2>Co ta strona robi?</h2>
     <p class="lead">Na tej stronie można zobaczyć gdzie w OpenStreetMap brakuje danych (adresy, budynki) według rejestrów państwowych oraz pobrać te dane w formacie, który łatwo można zaimportować do OSM za pomocą programu JOSM.</p>
-    <p>Budynki pochodzą ze zbioru "Modele budynków 3D (LOD1)". Jest to zbiór statyczny nie podlegający aktualizacji, więc te dane nie są odświeżane. Adresy pochodzą ze zbioru "Państwowy Rejestr Granic". Raz na tydzień w weekend pobierane są dane adresowe. Dodatkowo na bieżąco (co minutę) pobierane są nowe dane OpenStreetMap i porównywane z budynkami i adresami, więc po wrzuceniu danych do OSM w przeciągu kilku minut serwis powinien wyświetlić zmianę.</p>
+    <p>Budynki pochodzą ze zbioru BDOT10k. Adresy pochodzą ze zbioru "Państwowy Rejestr Granic". Raz na tydzień w weekend pobierane są dane adresowe. Dodatkowo na bieżąco (co minutę) pobierane są nowe dane OpenStreetMap i porównywane z budynkami i adresami, więc po wrzuceniu danych do OSM w przeciągu kilku minut serwis powinien wyświetlić zmianę.</p>
     <p>W przypadku problemów technicznych najlepiej utworzyć zgłoszenie <a href="https://github.com/openstreetmap-polska/gugik2osm/issues">na GitHub.</a></p>
     <h2>Co to JOSM?</h2>
     <p>JOSM to wielofunkcyjny edytor OpenStreetMap</p>
