#34 - changed description of link

--- a/web/index.html
+++ b/web/index.html
@@ -88,7 +88,7 @@
                 </li>
                 <li class="nav-item px-2">
                     <a id="wiki-link" class="nav-link" href="https://wiki.openstreetmap.org/wiki/Pl:Importowanie_adres%C3%B3w" target="_blank">
-                        <i class="fab fa-wikipedia-w fa-lg" title="Link do Wikipedii OpenStreetMap"></i>
+                        <i class="fab fa-wikipedia-w fa-lg" title="Link do Wiki OpenStreetMap"></i>
                     </a>
                 </li>
                 <li class="nav-item px-2">
