added overpass layers - first stage of deployment

--- a/web/index.html
+++ b/web/index.html
@@ -236,6 +236,7 @@
                         <span class="slider round"></span>
                     </label>
                     <label for="updatesLayerToggle">Aktualizacje OSM i eksporty danych</label>
+                    <div id="overpass-layers-placeholder"></div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" data-dismiss="modal">Zamknij</button>
