--- a/web/index.html
+++ b/web/index.html
@@ -98,12 +98,12 @@
                                  src="https://wiki.openstreetmap.org/w/images/7/79/Public-images-osm_logo.svg"/>
                         </a>
                         <a class='btn btn-outline-secondary dropdown-toggle dropdown-toggle-split' data-toggle='dropdown' href="#"></a>
-                        <ul class='dropdown-menu'>
+                        <ul class='dropdown-menu dropdown-menu-right'>
                             <li>
                               <a id="osm-link-edit-id" target="_blank" class="dropdown-item" href="https://www.openstreetmap.org/edit?editor=id">Edytuj ten obszar w iD</a>
                             </li>
                             <li>
-                              <a id="osm-link-edit-remote" target="_blank" class="dropdown-item" href="https://www.openstreetmap.org/edit?editor=remote">Edytuj ten obszar używając zewnętrznego edytora (JOSM, Potlatch, Merkaartor)</a>
+                              <a id="osm-link-edit-remote" target="_blank" class="dropdown-item" href="https://www.openstreetmap.org/edit?editor=remote">Edytuj ten obszar w zewnętrznym edytorze (JOSM, Potlatch, Merkaartor)</a>
                             </li>
                         </ul>
                     </div>
