#27 - marked places in code that require change to add reCaptcha v3

--- a/web/index.html
+++ b/web/index.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
 
     <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+<!-- todo: implement recaptcha v3 -->
 
     <link href="./custom.css" rel="stylesheet">
 </head>
@@ -185,6 +186,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
+<!--            todo: implement recaptcha v3 -->
                 <div class="modal-body">
                     Coś poszło nie tak podczas zgłaszania. Czy na pewno uzupełniłeś/aś captcha? Spróbuj jeszcze raz.
                     <br>
