--- a/web/opis_danych.html
+++ b/web/opis_danych.html
@@ -98,15 +98,16 @@
 
     <h2>PRG - dane adresowe</h2>
     <p>Dane adresowe z Państwowego Rejestru Granic. Dane przetworzone, wybrano tylko adresy, gdzie udało się dopasować do rejestru TERYT oraz numer porządkowy spełniał pewne wymagania.</p>
+    <p>Kolumna osm_ulica zawiera dopasowaną nazwę ulic yw formie występującej w OpenStreetMap (z rozwiniętymi skrótami).</p>
     <p>Format danych to spakowany plik CSV rozdzielany przecinkiem kodowanie UTF-8.</p>
     <p>Link: <a href="https://budynki.openstreetmap.org.pl/dane/prg_addresses.zip">https://budynki.openstreetmap.org.pl/dane/prg_addresses.zip</a></p>
     <p>Przykład:</p>
-    <pre class="pre-x-scrollable">lokalnyid,wojewodztwo,powiat,kod_gminy,gmina,kod_miejscowosci,miejscowosc,kod_ulicy,ulica,nr,pna,x_2180,y_2180,x_4326,y_4326
-c9375d20-be43-4753-b4c6-e0be27e89c22,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,01528,Boczna,2,39-460,695062.377,288055.247,21.7472156487785,50.427158025868
-61b79b8c-f2de-455c-8c0a-d70b9d7dcd84,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,03839,Długa,16,39-460,696832.9578,286059.107899999,21.7710738037879,50.4086304487115
-4ba56c67-98a6-429e-8110-eeeb77b41e56,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,03839,Długa,5,39-460,696848.018,286014.901000001,21.7712623760618,50.4082281761482
-6bd88659-63a0-42cc-bc22-e966f4a1825e,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,03839,Długa,8,39-460,696664.18,285708.622,21.7685170083056,50.4055376625793
-6f776d57-cd98-469d-b1c3-516aabef8ad9,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,03839,Długa,10,39-460,696738.525,285968.081,21.7696982864516,50.4078441597302
+    <pre class="pre-x-scrollable">lokalnyid,wojewodztwo,powiat,kod_gminy,gmina,kod_miejscowosci,miejscowosc,kod_ulicy,ulica,nr,pna,x_2180,y_2180,x_4326,y_4326,osm_ulica
+c9375d20-be43-4753-b4c6-e0be27e89c22,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,01528,Boczna,2,39-460,695062.377,288055.247,21.7472156487785,50.427158025868,Boczna
+61b79b8c-f2de-455c-8c0a-d70b9d7dcd84,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,03839,Długa,16,39-460,696832.9578,286059.107899999,21.7710738037879,50.4086304487115,Długa
+4ba56c67-98a6-429e-8110-eeeb77b41e56,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,03839,Długa,5,39-460,696848.018,286014.901000001,21.7712623760618,50.4082281761482,Długa
+6bd88659-63a0-42cc-bc22-e966f4a1825e,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,03839,Długa,8,39-460,696664.18,285708.622,21.7685170083056,50.4055376625793,Długa
+6f776d57-cd98-469d-b1c3-516aabef8ad9,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,03839,Długa,10,39-460,696738.525,285968.081,21.7696982864516,50.4078441597302,Długa
     </pre>
 
     <h2>OSM - dane adresowe</h2>
