--- a/web/index.html
+++ b/web/index.html
@@ -59,7 +59,7 @@
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
 
-    <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+<!--    <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>-->
 <!-- todo: implement recaptcha v3 -->
 
     <link href="./custom.css" rel="stylesheet">
@@ -244,7 +244,8 @@
                 </div>
 <!--            todo: implement recaptcha v3 -->
                 <div class="modal-body">
-                    Coś poszło nie tak podczas zgłaszania. Czy na pewno uzupełniłeś/aś captcha? Spróbuj jeszcze raz.
+<!--                    Coś poszło nie tak podczas zgłaszania. Czy na pewno uzupełniłeś/aś captcha? Spróbuj jeszcze raz.-->
+                    Coś poszło nie tak podczas zgłaszania. Spróbuj jeszcze raz.
                     <br>
                     Jeżeli problem będzie się powtarzać zgłoś go <a
                         href="https://github.com/openstreetmap-polska/gugik2osm/issues" target="_blank" rel="noopener">na GitHubie</a>
