changed URLs after moving files to external storage bucket to save space on server

--- a/web/opis_danych.html
+++ b/web/opis_danych.html
@@ -26,7 +26,6 @@
     <p><a href="/"><i class="fas fa-home"></i> Wróć na stronę główną</a></p>
 
     <h1 class="my-4">Opis danych dostępnych do pobrania</h1>
-    <p>Wszystkie dane znajdują się pod linkiem: <a href="https://budynki.openstreetmap.org.pl/dane/">https://budynki.openstreetmap.org.pl/dane/</a> , a poniżej opis zawartości.</p>
     <p>W przypadku problemów technicznych najlepiej utworzyć zgłoszenie <a href="https://github.com/openstreetmap-polska/gugik2osm/issues">na GitHub.</a></p>
 
     <h2>BDOT10k - obrysy budynków (BUBD)</h2>
@@ -37,45 +36,45 @@
     <p>Linki:</p>
     <dl>
         <dt>Polska:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a.zip</a></dd>
         <dt>Dolnośląskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_dolnoslaskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_dolnoslaskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_dolnoslaskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_dolnoslaskie.zip</a></dd>
         <dt>Kujawsko-Pomorskie</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_kujawsko_pomorskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_kujawsko_pomorskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_kujawsko_pomorskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_kujawsko_pomorskie.zip</a></dd>
         <dt>Łódzkie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lodzkie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lodzkie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_lodzkie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_lodzkie.zip</a></dd>
         <dt>Lubelskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubelskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubelskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_lubelskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_lubelskie.zip</a></dd>
         <dt>Lubuskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubuskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubuskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_lubuskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_lubuskie.zip</a></dd>
         <dt>Małopolskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubuskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_lubuskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_lubuskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_lubuskie.zip</a></dd>
         <dt>Mazowieckie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_mazowieckie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_mazowieckie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_mazowieckie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_mazowieckie.zip</a></dd>
         <dt>Opolskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_opolskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_opolskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_opolskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_opolskie.zip</a></dd>
         <dt>Podkarpackie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_podkarpackie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_podkarpackie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_podkarpackie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_podkarpackie.zip</a></dd>
         <dt>Podlaskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_podlaskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_podlaskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_podlaskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_podlaskie.zip</a></dd>
         <dt>Pomorskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_pomorskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_pomorskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_pomorskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_pomorskie.zip</a></dd>
         <dt>Śląskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_slaskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_slaskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_slaskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_slaskie.zip</a></dd>
         <dt>Świętokrzyskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_swietokrzyskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_swietokrzyskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_swietokrzyskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_swietokrzyskie.zip</a></dd>
         <dt>Warmińsko-Mazurskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_warminsko_mazurskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_warminsko_mazurskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_warminsko_mazurskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_warminsko_mazurskie.zip</a></dd>
         <dt>Wielkopolskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_wielkopolskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_wielkopolskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_wielkopolskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_wielkopolskie.zip</a></dd>
         <dt>Zachodniopomorskie:</dt>
-        <dd><a href="https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_zachodniopomorskie.zip">https://budynki.openstreetmap.org.pl/dane/bdot10k_bubd_a_zachodniopomorskie.zip</a></dd>
+        <dd><a href="https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_zachodniopomorskie.zip">https://f003.backblazeb2.com/file/gugik2osm/bdot10k_bubd_a_zachodniopomorskie.zip</a></dd>
     </dl>
 
     <h2>LOD1 - obrysy budynków</h2>
     <p>Zbiór do pobrania zawiera obrysy budynków. Dane pochodzą z przetworzenia modeli budynków 3D udostępnianych przez Główny Urząd Geodezji i Kartografii w geoportalu krajowym.</p>
     <p>Format danych to spakowany plik Geopackage (gpkg) zawierający geometrie poligonowe.</p>
-    <p>Link: <a href="https://budynki.openstreetmap.org.pl/dane/lod1_buildings.zip">https://budynki.openstreetmap.org.pl/dane/lod1_buildings.zip</a></p>
+    <p>Link: <a href="https://f003.backblazeb2.com/file/gugik2osm/lod1_buildings.zip">https://f003.backblazeb2.com/file/gugik2osm/lod1_buildings.zip</a></p>
     <img src="/screenshots/lod1_budynki_przyklad.jpg" class="img-fluid mb-4" alt="Zrzut ekranu pokazujący obrysy budynków na tle ortofotomapy."/>
     <p>Poniżej klauzula informacyjna zgodnie z licencją zbioru.</p>
     <p><b>Informacja o wykorzystanym zbiorze budynków 3D</b></p>
@@ -100,7 +99,7 @@
     <p>Dane adresowe z Państwowego Rejestru Granic. Dane przetworzone, wybrano tylko adresy, gdzie udało się dopasować do rejestru TERYT oraz numer porządkowy spełniał pewne wymagania.</p>
     <p>Kolumna osm_ulica zawiera dopasowaną nazwę ulic yw formie występującej w OpenStreetMap (z rozwiniętymi skrótami).</p>
     <p>Format danych to spakowany plik CSV rozdzielany przecinkiem kodowanie UTF-8.</p>
-    <p>Link: <a href="https://budynki.openstreetmap.org.pl/dane/prg_addresses.zip">https://budynki.openstreetmap.org.pl/dane/prg_addresses.zip</a></p>
+    <p>Link: <a href="https://f003.backblazeb2.com/file/gugik2osm/prg_addresses.zip">https://f003.backblazeb2.com/file/gugik2osm/prg_addresses.zip</a></p>
     <p>Przykład:</p>
     <pre class="pre-x-scrollable">lokalnyid,wojewodztwo,powiat,kod_gminy,gmina,kod_miejscowosci,miejscowosc,kod_ulicy,ulica,nr,pna,x_2180,y_2180,x_4326,y_4326,osm_ulica
 c9375d20-be43-4753-b4c6-e0be27e89c22,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęba,0980636,Nowa Dęba,01528,Boczna,2,39-460,695062.377,288055.247,21.7472156487785,50.427158025868,Boczna
@@ -113,7 +112,7 @@ c9375d20-be43-4753-b4c6-e0be27e89c22,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęb
     <h2>OSM - dane adresowe</h2>
     <p>Dane adresowe z OpenStreetMap. Dla adresów przypisanych do obrysów budynków wyciągnięto centroid geometrii.</p>
     <p>Format danych to spakowany plik CSV rozdzielany przecinkiem kodowanie UTF-8.</p>
-    <p>Link: <a href="https://budynki.openstreetmap.org.pl/dane/osm_addresses.zip">https://budynki.openstreetmap.org.pl/dane/osm_addresses.zip</a></p>
+    <p>Link: <a href="https://f003.backblazeb2.com/file/gugik2osm/osm_addresses.zip">https://f003.backblazeb2.com/file/gugik2osm/osm_addresses.zip</a></p>
     <p>Przykład:</p>
     <pre class="pre-x-scrollable">osm_id,miejscowosc,czesc_miejscowosci,ulica,nr,pna,kod_ulic,kod_miejscowosci,x_4326,y_4326
 1,Poznań,,Ostatnia,14,,,,16.8733883064414,52.3706387086838
@@ -127,17 +126,17 @@ c9375d20-be43-4753-b4c6-e0be27e89c22,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęb
     <p></p>
     <p>Format danych to spakowany plik Geopackage (gpkg) zawierający geometrie poligonowe oraz kilka atrybutów o wysokości budynku lub liczbie kondygnacji (tam gdzie te dane są w OSM).</p>
     <img src="/screenshots/osm_budynki_przyklad.jpg" class="img-fluid mb-4" alt="Zrzut ekranu pokazujący obrysy budynków na tle ortofotomapy."/>
-    <p>Link: <a href="https://budynki.openstreetmap.org.pl/dane/osm_buildings.zip">https://budynki.openstreetmap.org.pl/dane/osm_buildings.zip</a></p>
+    <p>Link: <a href="https://f003.backblazeb2.com/file/gugik2osm/osm_buildings.zip">https://f003.backblazeb2.com/file/gugik2osm/osm_buildings.zip</a></p>
 
     <h2>TERYT - nazwy jednostek administracyjnych, miejscowości i ich części oraz ulic</h2>
     <p>Nazwy zestandaryzowane do tzw. Title Case (pierwsza litera słowa wielka reszta mała). Dane zmodyfikowane w zakresie kodów podstawowych dla dzielnic Warszawy i delegatur 4 miast. Oryginalnie w TERYT kod podstawowy miejscowości wskazuje na siebie samą ie. Bemowo to samodzielna miejscowość co może jest zgodne z pewnymi założeniami odwzorowania stanu prawnego to jest niepraktyczne przy prawie każdym normalnym zastosowaniu. Dzielnice Warszawy potraktowano jako części gminy M. St. Warszawa we wpisach TERC oraz jako części miejscowości Warszawa we wpisach SIMC. Powinno to ułatwić pracę. W razie znalezienia błędów proszę o zgłoszenie np <a href="https://github.com/openstreetmap-polska/gugik2osm/issues">na GitHub.</a></p>
     <p>Format danych to plik CSV z nagłówkiem rozdzielany przecinkiem kodowanie UTF-8. Wszystkie pola powinny być traktowane jako tekst.</p>
-    <p>Link województwa: <a href="https://budynki.openstreetmap.org.pl/dane/teryt_woj.csv">https://budynki.openstreetmap.org.pl/dane/teryt_woj.csv</a></p>
-    <p>Link powiaty: <a href="https://budynki.openstreetmap.org.pl/dane/teryt_pow.csv">https://budynki.openstreetmap.org.pl/dane/teryt_pow.csv</a></p>
-    <p>Link gminy: <a href="https://budynki.openstreetmap.org.pl/dane/teryt_gmi.csv">https://budynki.openstreetmap.org.pl/dane/teryt_gmi.csv</a></p>
-    <p>Link miejscowości: <a href="https://budynki.openstreetmap.org.pl/dane/teryt_msc.csv">https://budynki.openstreetmap.org.pl/dane/teryt_msc.csv</a></p>
-    <p>Link części miejscowości: <a href="https://budynki.openstreetmap.org.pl/dane/teryt_cz_msc.csv">https://budynki.openstreetmap.org.pl/dane/teryt_cz_msc.csv</a></p>
-    <p>Link ulice : <a href="https://budynki.openstreetmap.org.pl/dane/teryt_ul.csv">https://budynki.openstreetmap.org.pl/dane/teryt_ul.csv</a></p>
+    <p>Link województwa: <a href="https://f003.backblazeb2.com/file/gugik2osm/teryt_woj.csv">https://f003.backblazeb2.com/file/gugik2osm/teryt_woj.csv</a></p>
+    <p>Link powiaty: <a href="https://f003.backblazeb2.com/file/gugik2osm/teryt_pow.csv">https://f003.backblazeb2.com/file/gugik2osm/teryt_pow.csv</a></p>
+    <p>Link gminy: <a href="https://f003.backblazeb2.com/file/gugik2osm/teryt_gmi.csv">https://f003.backblazeb2.com/file/gugik2osm/teryt_gmi.csv</a></p>
+    <p>Link miejscowości: <a href="https://f003.backblazeb2.com/file/gugik2osm/teryt_msc.csv">https://f003.backblazeb2.com/file/gugik2osm/teryt_msc.csv</a></p>
+    <p>Link części miejscowości: <a href="https://f003.backblazeb2.com/file/gugik2osm/teryt_cz_msc.csv">https://f003.backblazeb2.com/file/gugik2osm/teryt_cz_msc.csv</a></p>
+    <p>Link ulice : <a href="https://f003.backblazeb2.com/file/gugik2osm/teryt_ul.csv">https://f003.backblazeb2.com/file/gugik2osm/teryt_ul.csv</a></p>
     <p>Przykład województwa:</p>
     <pre class="pre-x-scrollable">kod_woj,wojewodztwo,nazdod,stan_na
 02,Dolnośląskie,województwo,2020-01-01
@@ -187,10 +186,6 @@ c9375d20-be43-4753-b4c6-e0be27e89c22,PODKARPACKIE,tarnobrzeski,1820044,Nowa Dęb
 14,Mazowieckie,1432,Warszawski Zachodni,1432013,Błonie,gmina miejsko-wiejska,1432015,obszar wiejski,01,wieś,0000046,Bieniewice,,,,,24879,ul.,Wschodnia,2020-04-02
     </pre>
 
-    <br>
-    <hr>
-    <h2>Wszystkie pliki:</h2>
-    <p><a href="https://budynki.openstreetmap.org.pl/dane/">https://budynki.openstreetmap.org.pl/dane/</a></p>
     <br><br><br><br>
 </div>
 
