--- a/web/index.html
+++ b/web/index.html
@@ -2,18 +2,6 @@
 <html lang="pl">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153528940-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-153528940-1');
-    </script>
 
     <meta charset='utf-8' />
     <title>Budynki OpenStreetMap</title>
@@ -357,20 +345,22 @@
         <div id='map'></div>
     </div>
 
-    <!-- START Bootstrap-Cookie-Alert -->
-    <!--  thanks to https://github.com/Wruczek/Bootstrap-Cookie-Alert  -->
-    <div class="alert text-center cookiealert" role="alert">
-        &#x1F36A; Używamy cookies żeby monitorować popularność strony.
-        <a href="https://cookiesandyou.com/" target="_blank"  rel="noopener">Czym są cookies?</a>
-        <button type="button" class="btn btn-primary btn-sm acceptcookies" aria-label="Close">
-            OK
+    <script>
+        const closeBottomAlert = () => {
+            $("#bottomAlert")[0].classList.remove("show")
+        }
+    </script>
+    <div id="bottomAlert" class="alert text-center cookiealert show" role="alert">
+        <span>Hosting dzięki: </span>
+        <a class="mx-1" href="https://cloudferro.com" rel="noreferrer" target="_blank" title="CloudFerro"><img style="max-height: 35px" alt="CloudFerro" src="./cloudferro_logo.png"></a>
+        <button type="button" class="btn btn-primary btn-sm mx-1" aria-label="Close" onclick="closeBottomAlert()">
+            Zamknij
         </button>
+        <span>Strona nie jest rozwijana/naprawiana i wymaga przepisania od nowa.</span>
     </div>
-    <!-- END Bootstrap-Cookie-Alert -->
 
     <script src="/map.js"></script>
     <script src="/misc.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.js"></script>
 </body>
 
 </html>
